# 14maz

./: .gitignore  docker-compose.dev.yaml  docker-compose.yaml
db-gateway/: '  Cargo.toml  Dockerfile
db-gateway/src/: html_parser.rs  lib.rs  main.rs  snapshots.rs  urls.rs
db-gateway/src/embeddings/: api.rs  db.rs  jobs.rs  mod.rs
db-gateway/src/utils/: db.rs
