[package]
name = "db-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
lazy_static = "1.4.0"
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "json",
  "uuid",
] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
chrono = "0.4.31"
url = "2.4.1"
